load("@rules_cc//cc:defs.bzl", "cc_library")
load("//uni/tools/build_info:generate_build_info.bzl", "generate_build_info")

# Generate build info source file from workspace status
# This is a workaround for MSVC which doesn't receive workspace status macros
# in linkstamp compilation (unlike GCC/Clang on Linux/macOS)
generate_build_info(
    name = "generate_build_info",
    out = "Build/Info.generated.cc",
)

# Build info library with generated implementation
cc_library(
    name = "pkg-build",
    srcs = ["Build/Info.generated.cc"],
    hdrs = ["Build/Info.h"],
    strip_include_prefix = ".",
    visibility = ["//visibility:public"],
)
