load("@tx-kit-ext//rules/build:tx_library.bzl", "tx_library")

tx_library(
    name = "pkg-fs",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    deps = [
        "//src/pkg-boot",

        # https://fuchsia.googlesource.com/fuchsia/+/HEAD/build/bazel/BAZEL_RUNFILES.md
        # Obsolete: 
        #   "@bazel_tools//tools/cpp/runfiles",
        #   as refers to rules_cc: https://github.com/bazelbuild/bazel/blob/master/tools/cpp/runfiles/runfiles.h
        "@rules_cc//cc/runfiles",
    ],
    visibility = ["//visibility:public"],
)
