load("@tx-kit-ext//rules:multi_lib.bzl", "multi_lib")
load("@bazel_skylib//rules:common_settings.bzl", "bool_flag")

bool_flag(
    name = "disable_ssl",
    build_setting_default = False,
    visibility = ["//visibility:public"],
)
config_setting(
    name = "disable_ssl_setting",
    flag_values = {":disable_ssl": "true"},
    visibility = ["//visibility:public"],
)

multi_lib(
    name = "pkg-http",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    defines = select({
        ":disable_ssl_setting": [],
        "//conditions:default": ["HTTP_CLIENT_WITH_SSL"],
    }),
    deps = [
        "//src/pkg-log",
        "@boost.asio//:boost.asio",
        "@ada-url//:ada", #TODO: maybe cxxurl?
        "@gsl//:gsl",
    ] + select({
        "@platforms//cpu:wasm32": [],
        "//conditions:default": [
            "@boost.beast//:boost.beast",
        ],
    }) + select({
        "@platforms//cpu:wasm32": [],
        ":disable_ssl_setting": [],
        "//conditions:default": [
            "@boringssl//:ssl",
        ],
    }),
    linkopts = select({
        "@platforms//cpu:wasm32": [
            "-sFETCH=1", # Emscripten Fetch API for EmFetchLiteClient
            # https://emscripten.org/docs/porting/connecting_cpp_and_javascript/Interacting-with-code.html#calling-compiled-c-functions-from-javascript-using-ccall-cwrap
            # "-sDEFAULT_LIBRARY_FUNCS_TO_INCLUDE='$dynCall,$ccall,$cwrap,$UTF8ToString'", # Enable for calling C++ from EM_JS
            # "-sEXPORTED_FUNCTIONS='_main,_c_test'", # Export c_test function for calling from JS
            # Enable Embind for emscripten::val https://emscripten.org/docs/porting/connecting_cpp_and_javascript/embind.html#using-val-to-transliterate-javascript-to-c
            # "-lembind", #TODO: maybe w/ "-sEMBIND_AOT=1"
            # "-sASYNCIFY", # Asyncify for EM_ASYNC_JS https://emscripten.org/docs/porting/asyncify.html
            # "-sALLOW_TABLE_GROWTH", # Calling JavaScript functions as function pointers from C https://emscripten.org/docs/porting/connecting_cpp_and_javascript/Interacting-with-code.html#calling-javascript-functions-as-function-pointers-from-c
        ],
        "//conditions:default": [],
    }),
    visibility = ["//visibility:public"],
)
