load("@tx-kit-ext//rules/build:tx_library.bzl", "tx_library")

tx_library(
    name = "pkg-log",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    deps = [
        #TODO: spdlog w/ SPDLOG_USE_STD_FORMAT and SPDLOG_NO_EXCEPTIONS
        "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)
