load("@tx-kit-ext//rules:multi_lib.bzl", "multi_lib")

multi_lib(
    name = "pkg-log",
    srcs = glob(["**/*.cpp"]),
    hdrs = glob(["**/*.h"]),
    strip_include_prefix = ".",
    defines = [
        "SPDLOG_USE_STD_FORMAT",
        "SPDLOG_NO_EXCEPTIONS",
    ],
    deps = [
        "@spdlog//:spdlog",
    ],
    visibility = ["//visibility:public"],
)
