load("@tx-kit-ext//rules/build:tx_test.bzl", "tx_test")

tx_test(
    name = "app",
    srcs = ["app_test.cpp"],
    deps = [
        "//src/pkg-app",
        "//src/pkg-boot",
        "@googletest//:gtest_main",
    ],
)

tx_test(
    name = "async_mutex",
    srcs = ["async_mutex_test.cpp"],
    deps = [
        "//src/pkg-app",
        "//src/pkg-boot",
        "@googletest//:gtest_main",
    ],
)
