load("@tx-kit-ext//rules/build:tx_test.bzl", "tx_test")

tx_test(
    name = "boot",
    srcs = ["boot_test.cpp"],
    deps = [
        "//src/pkg-boot",
        "@googletest//:gtest_main",
    ],
)

tx_test(
    name = "fail",
    srcs = ["fail_boot.cpp"],
    deps = [
        "//src/pkg-boot",
        "@googletest//:gtest_main",
    ],
    tags = ["manual"],  # Don't run this test automatically, only for manual checks
)
