# load("@rules_cc//cc:cc_test.bzl", "cc_test")
# cc_test(
#     name = "cc_test",
#     srcs = ["cc_src.cpp"],
#     deps = [
#         "//src/pkg-log",
#         "@googletest//:gtest_main",
#     ],
#     #exec_compatible_with = ["@platforms//:incompatible"],
# )

# load("@rules_shell//shell:sh_test.bzl", "sh_test")
# sh_test(
#     name = "cc_bin_sh_test",
#     srcs = ["sh_wrapper.sh"],
#     data = [":cc_bin"],
#     exec_compatible_with = ["@platforms//os:windows"],
# )

load("@rules_cc//cc:cc_binary.bzl", "cc_binary")
cc_binary(
    name = "cc_bin",
    srcs = ["cc_src.cpp"],
    deps = [
        "//src/pkg-boot",
        "@googletest//:gtest_main",
    ],
    #exec_compatible_with = ["@platforms//:incompatible"],
)

# load("@emsdk//emscripten_toolchain:wasm_rules.bzl", "wasm_cc_binary")
# wasm_cc_binary(
#     name = "cc_bin_wasm",
#     cc_target = ":cc_bin",
#     outputs = [
#         "hello-world.js",
#         "hello-world.wasm",
#     ],
# )

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
sh_binary(
    name = "cc_bin_sh_bin.cmd",
    srcs = ["sh_wrapper.cmd"],
    data = [
        ":cc_bin",
    ],
    args = [
        "$(location :cc_bin)",
    ],
    # exec_compatible_with = [
    #     "@platforms//os:windows",
    #     "@platforms//os:macos",
    #     "@platforms//os:linux",
    # ],
)
