load("@tx-kit-ext//rules/build:multi_app.bzl", "multi_binary")
multi_binary(
    name = "bin",
    srcs = ["cc_src.cpp"],
    deps = [
        "//src/pkg-log",
        # "//src/pkg-boot",
        "@googletest//:gtest_main",
    ],
)

load("@rules_shell//shell:sh_binary.bzl", "sh_binary")
sh_binary(
    name = "sh_bin.cmd",
    srcs = ["@tx-kit-ext//runner:sh_wrapper.cmd"],
    data = [
        "//:runner",
        ":cc_bin",
    ],
    args = [
        "$(location //:runner)",
        "$(location :cc_bin)",
    ],
)

load("@rules_shell//shell:sh_test.bzl", "sh_test")
sh_test(
    name = "sh_tst.cmd",
    srcs = ["@tx-kit-ext//runner:sh_wrapper.cmd"],
    data = [
        "//:runner",
        ":cc_bin",
    ],
    args = [
        "$(location //:runner)",
        "$(location :cc_bin)",
    ],
)
