load("@rules_shell//shell:sh_test.bzl", "sh_test")
load("@rules_python//python:defs.bzl", "py_binary")
load("@tx-kit-ext//runner:exec_tool.bzl", "exec_tool")

### sh_test w/ sh_gen.sh tools
genrule(
    name = "sh_gen",
    outs = ["sh_gen.txt"],
    cmd = "$(location sh_gen.sh) $@",
    tools = ["sh_gen.sh"],
    tags = ["manual"],
)

sh_test(
    name = "sh",
    srcs = ["sh_test.sh"],
    data = [":sh_gen.txt"],
    tags = ["manual"],  # Run manually to inspect test environment
    size = "small",
    #TODO: add support for shell scripts in runner
    target_compatible_with = select({
        "@platforms//cpu:wasm32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)

### py_binary w/ exec_tool wrapper
py_binary(
    name = "py_bin",
    srcs = ["py_test.py"],
    main = "py_test.py",
    tags = ["manual"],
)

exec_tool(
    name = "py",
    tool = ":py_bin",
    tags = ["manual"],
)
