load("@rules_python//python:defs.bzl", "py_binary", "py_test")

py_binary(
    name = "http_client",
    srcs = ["http_client.py"],
    main = "http_client.py",
    visibility = ["//visibility:public"],
)

py_binary(
    name = "http_server",
    srcs = ["http_server.py"],
    main = "http_server.py",
    visibility = ["//visibility:public"],
)

py_test(
    name = "http_integration",
    srcs = ["http_integration_test.py"],
    main = "http_integration_test.py",
    args = [
        "$(location :http_client)",
        "$(location :http_server)",
    ],
    data = [
        ":http_client",
        ":http_server",
    ],
)
