load("@rules_python//python:defs.bzl", "py_test")
load("@tx-kit-ext//rules/build:defs.bzl", "tx_binary")

# C++ HTTP client test (requires server to be running)
tx_binary(
    name = "client",
    srcs = ["client_test.cpp"],
    args = ["--gtest_output=xml:client_test_results.xml"],
    deps = [
        "//src/pkg-app",
        "//src/pkg-http",
        "@googletest//:gtest_main",
    ],
)

alias(
    name = "server",
    actual = "//test/http/stub:stub_server",
)

# Wrapper test that starts server and runs C++ test
py_test(
    name = "http",
    srcs = ["//test/http/stub:integration_test_runner.py"],
    args = [
        "$(location :client.run)",
        "$(location :server)",
    ],
    data = [
        ":client.run",
        ":server",
    ],
    main = "integration_test_runner.py",
    # exclusive: prevent parallel execution with other tests (port conflicts)
    # requires-network: test uses network (local server on specific port)
    tags = [
        "exclusive",
        "requires-network",
    ],

    # TODO: !!!! ALLOW TO RUN WASM INTEGRATION TESTS !!!!
    target_compatible_with = select({
        "@platforms//cpu:wasm32": ["@platforms//:incompatible"],
        "//conditions:default": [],
    }),
)
